--- a/samples/config/config.yml
+++ b/samples/config/config.yml
@@ -3,4 +3,5 @@ appSecret: <APP_SECRET>
 ssoUrl: https://sso.digitalenergy.online
 decortUrl: https://mr4.digitalenergy.online
 retries: 5
+timeout: 5m
 sslSkipVerify: false
