--- a/samples/config/legacy-config.yml
+++ b/samples/config/legacy-config.yml
@@ -2,4 +2,5 @@ username: <USERNAME>
 password: <PASSWORD>
 decortUrl: https://mr4.digitalenergy.online
 retries: 5
+timeout: 5m
 sslSkipVerify: true
